--- a/env.example
+++ b/env.example
@@ -1,3 +1,5 @@
 QDRANT_URL=http://qdrant:6333
+QDRANT_URL=https://your-cluster-url.aws.cloud.qdrant.io:6333
+QDRANT_API_KEY=<your-qdrant-api-key>
 GEMINI_API_KEY=<your-google-gemini-key>
 OPENAI_API_KEY=<your-openai-key> 
