--- a/docker-compose.cloud.yml
+++ b/docker-compose.cloud.yml
@@ -6,7 +6,7 @@ services:
     env_file: .env
     ports:
       - "8000:8000"
-    command: yarn start
+    command: npm start
     volumes:
       - .:/app
       - /app/node_modules
