--- a/package.json
+++ b/package.json
@@ -18,21 +18,23 @@
     "clean-cloud": "docker compose -f docker-compose.cloud.yml down"
   },
   "dependencies": {
-    "fastify": "^4.24.3",
     "@fastify/cors": "^8.4.0",
-    "zod": "^3.22.4",
-    "@qdrant/js-client-rest": "^1.7.0",
     "@google/generative-ai": "^0.2.1",
+    "@qdrant/js-client-rest": "^1.7.0",
+    "@types/uuid": "^10.0.0",
+    "dotenv": "^16.3.1",
+    "fastify": "^4.24.3",
     "openai": "^4.24.1",
-    "dotenv": "^16.3.1"
+    "uuid": "^11.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5.3.2",
-    "ts-node": "^10.9.1",
+    "@types/jest": "^29.5.8",
+    "@types/node": "^20.10.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1",
-    "@types/node": "^20.10.0",
-    "@types/jest": "^29.5.8"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.3.2"
   },
   "engines": {
     "node": ">=18.0.0"
