--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "openai": "^4.24.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
     "zod": "^3.22.4"
