--- a/package.json
+++ b/package.json
@@ -23,23 +23,25 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.3.1",
     "lucide-react": "^0.511.0",
-    "next": "^12.3.4",
+    "next": "^15.3.2",
     "openai": "^4.24.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
     "tailwind-merge": "^3.3.0",
     "uuid": "^11.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^12.3.4",
+    "eslint-config-next": "^15.4.0-canary.51",
     "tailwindcss": "^3.4.0",
+    "ts-jest": "^29.3.4",
     "typescript": "^5.3.2"
   },
   "engines": {
