--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@google/genai": "^0.3.1",
     "@qdrant/js-client-rest": "^1.7.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
