--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.3.1",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
+    "next-themes": "^0.4.6",
     "openai": "^4.24.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
