--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.3.1",
+    "jotai": "^2.12.5",
     "lucide-react": "^0.511.0",
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
