--- a/package.json
+++ b/package.json
@@ -12,10 +12,15 @@
     "docker:build": "docker build -t yearn .",
     "docker:run": "docker run -p 3000:3000 yearn",
     "docker:up": "docker compose up --build",
-    "docker:down": "docker compose down"
+    "docker:down": "docker compose down",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:studio": "prisma studio",
+    "db:reset": "prisma db push --force-reset"
   },
   "dependencies": {
     "@google/genai": "^0.3.1",
+    "@prisma/client": "^5.22.0",
     "@qdrant/js-client-rest": "^1.7.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-select": "^2.2.5",
@@ -29,6 +34,7 @@
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
     "openai": "^4.24.1",
+    "prisma": "^5.22.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-markdown": "^10.1.0",
