setup: configured API keys and their verification

--- a/env.example
+++ b/env.example
@@ -1,4 +1,9 @@
+# Default environment variables (committed to git)
 QDRANT_URL=https://your-cluster-url.aws.cloud.qdrant.io:6333
 QDRANT_API_KEY=<your-qdrant-api-key>
 GEMINI_API_KEY=<your-google-gemini-key>
-OPENAI_API_KEY=<your-openai-key> 
+OPENAI_API_KEY=<your-openai-key>
+
+# For project-specific overrides, create a .env.local file (not committed):
+# echo "OPENAI_API_KEY=sk-test-key-for-this-project-only" > .env.local
+# echo "GEMINI_API_KEY=test-gemini-key" >> .env.local 
