--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       - .:/app
       - /app/node_modules
 
-  yearn:
+  ursiform:
     build:
       context: .
       dockerfile: Dockerfile
