--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/uuid": "^10.0.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.4.0-canary.51",
+    "fastify": "^5.3.3",
     "tailwindcss": "^3.4.0",
     "ts-jest": "^29.3.4",
     "typescript": "^5.3.2"
