removed code duplication

--- a/env.example
+++ b/env.example
@@ -1,5 +1,5 @@
 # Default environment variables (committed to git)
-DATABASE_URL=<your-database-path-locally>
+DATABASE_URL="file:./prisma/dev.db"
 QDRANT_URL=https://your-cluster-url.aws.cloud.qdrant.io:6333
 QDRANT_API_KEY=<your-qdrant-api-key>
 GEMINI_API_KEY=<your-google-gemini-key>
