backend: centralised configuration and removed API key hardcoding

--- a/env.example
+++ b/env.example
@@ -1,10 +1,49 @@
-# Default environment variables (committed to git)
-DATABASE_URL="file:./prisma/dev.db"
-QDRANT_URL=https://your-cluster-url.aws.cloud.qdrant.io:6333
-QDRANT_API_KEY=<your-qdrant-api-key>
-GEMINI_API_KEY=<your-google-gemini-key>
-OPENAI_API_KEY=<your-openai-key>
+# ==============================================
+# URSIFORM CONFIGURATION
+# QUICK START
+# ==============================================
+# 1. Copy this file: cp env.example .env.local
+# 2. Set at least one API key: OPENAI_API_KEY or GEMINI_API_KEY
+# 3. For local development, keep QDRANT_URL as localhost
+# 4. For production, set QDRANT_URL and QDRANT_API_KEY for cloud
+#
+# The app validates all config on startup and provides helpful error messages 
 
-# For project-specific overrides, create a .env.local file (not committed):
-# echo "OPENAI_API_KEY=sk-test-key-for-this-project-only" > .env.local
-# echo "GEMINI_API_KEY=test-gemini-key" >> .env.local 
+# ==============================================
+# APPLICATION SETTINGS
+# ==============================================
+NODE_ENV=development
+LOG_LEVEL=info
+PORT=3000
+
+# ==============================================
+# QDRANT VECTOR DATABASE
+# ==============================================
+# For local development (default)
+QDRANT_URL=http://localhost:6333
+
+# For Qdrant Cloud (comment out local URL above and use these)
+# QDRANT_URL=https://your-cluster-id.region.gcp.cloud.qdrant.io
+# QDRANT_API_KEY=<your-qdrant-api-key>
+
+# Collection settings
+QDRANT_DEFAULT_COLLECTION=vectors
+QDRANT_MAX_RETRIES=3
+QDRANT_TIMEOUT=30000
+
+# ==============================================
+# EMBEDDING PROVIDERS (at least one required)
+# ==============================================
+# OpenAI (recommended)
+OPENAI_API_KEY=<your-openai-key>
+OPENAI_EMBEDDING_MODEL=text-embedding-ada-002
+OPENAI_MAX_TOKENS=8191
+
+# Google Gemini (optional alternative)
+GEMINI_API_KEY=<your-google-gemini-key>
+GEMINI_MODEL=text-embedding-004
+
+# ==============================================
+# DATABASE (for chat history and metadata)
+# ==============================================
+DATABASE_URL=file:./prisma/dev.db
