tests: added new tests and a testing demo script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,18 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test:run": "node scripts/test-runner.js",
+    "test:run-coverage": "node scripts/test-runner.js --coverage",
+    "test:run-watch": "node scripts/test-runner.js --watch",
+    "test:config": "node scripts/test-runner.js --suite=config",
+    "test:startup": "node scripts/test-runner.js --suite=startup",
+    "test:db": "node scripts/test-runner.js --suite=qdrant-db",
+    "test:embedder": "node scripts/test-runner.js --suite=embedder",
+    "test:nlp": "node scripts/test-runner.js --suite=nlp-query",
+    "test:demo": "node scripts/demo-test-runner.js",
     "type-check": "tsc --noEmit",
     "docker:build": "docker build -t ursiform .",
     "docker:run": "docker run -p 3000:3000 ursiform",
@@ -59,6 +71,8 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.4.0-canary.51",
     "fastify": "^5.3.3",
+    "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
     "tailwindcss": "^3.4.0",
     "ts-jest": "^29.3.4",
     "typescript": "^5.3.2"
