--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@google/genai": "^0.3.1",
+    "@next/swc-darwin-arm64": "^15.4.0",
     "@prisma/client": "^5.22.0",
     "@qdrant/js-client-rest": "^1.7.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
